# inf2004-project

./: CMakeLists.txt  README.md
accelerometer/: CMakeLists.txt  mpu6050_i2c.c  mpu6050_i2c.h
common/: CMakeLists.txt  accelerometer.c  accelerometer.h  code39_decoder.c  code39_decoder.h  encoder.c  encoder.h  ir_sensor.c  ir_sensor.h  motor.c  motor.h  network.c  network.h  pins.h  udp.h  ultrasonic.c  ultrasonic.h  wheels.c  wheels.h
lab/: CMakeLists.txt
lab/lab2_uart/: CMakeLists.txt  lab2_ex.c
lab/lab3_interrupt_timer/: CMakeLists.txt  lab3_ex.c
lab/lab4_motor/: CMakeLists.txt  lab4_motor.c
lab/lab4_pwm_adc/: CMakeLists.txt  lab4_ex.c
lab/lab5_rtos/: CMakeLists.txt
lab/lab6_debugging/: CMakeLists.txt  lab6_ex.c
project/: CMakeLists.txt
project/accelerometer/: CMakeLists.txt  mpu6050_i2c.c  mpu6050_i2c.uf2
project/common/: pins.h
project/controller/: CMakeLists.txt  main_controller.c
project/dashboard/: CMakeLists.txt  udp_dashboard.c
project/encoder/: CMakeLists.txt  encoder.c  encoder.h  main.c
project/encoder/include/hardware/: encoder.h
project/main/: CMakeLists.txt  final.c  final.h  main.c  reciever.c  reciever.h  setup.c  setup.h  states.c  states.h
project/motor/: CMakeLists.txt  motor.c  motor.h  project-motor-example.c  project_motor_forward.c  wheel_encoder.h
project/motor_turning/: CMakeLists.txt
project/ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
project/ultrasonic/hardware/: ultrasonic.h
project/wheel_encoder_test/: CMakeLists.txt  wheel_encoder_test.c
testing/: CMakeLists.txt
testing/accelerometer/: CMakeLists.txt  mpu6050_i2c.c
testing/encoder/: CMakeLists.txt
testing/motor_forward/: CMakeLists.txt  main.c
testing/motor_pid/: CMakeLists.txt  main.c
testing/motor_turning/: CMakeLists.txt  main.c
testing/ultrasonic/: CMakeLists.txt  main_ultrasonic.c
testing/wheel_encoder_distance/: CMakeLists.txt  main.c
testing/wheel_encoder_rotation/: CMakeLists.txt  main.c
week10/: CMakeLists.txt
week10/common/: pins.h
week10/station1/: CMakeLists.txt  station1.c
week10/station2/: CMakeLists.txt  code39_decoder.c  code39_decoder.h  ir_sensor.c  ir_sensor.h  station2.c  utils.c  utils.h
week10/station3/: CMakeLists.txt  main.c
week10/station3_controller/: CMakeLists.txt  accelerometer.h  main.txt  mpu6050_i2c.c  udp.h
week10/station3_reciever/: CMakeLists.txt  udp_server.c  week10_station3_reciever.c
week12/: CMakeLists.txt  functions.c  functions.h  main.c
