cmake_minimum_required(VERSION 3.12)

if (NOT PICO_NO_HARDWARE)
    add_subdirectory(lab2_uart)
    add_subdirectory(lab3_interrupt_timer)
    add_subdirectory(lab4_pwm_adc)
    add_subdirectory(lab4_motor)
    add_subdirectory(lab6_debugging)

    if (NOT FREERTOS_KERNEL_PATH AND NOT DEFINED ENV{FREERTOS_KERNEL_PATH})
        message("Skipping Pico W FreeRTOS examples as FREERTOS_KERNEL_PATH not defined")
    else()
        include(FreeRTOS_Kernel_import.cmake)
        add_subdirectory(lab5_rtos)
    endif()
endif()